# LightApp_MyAnki

./: .gitignore  .gitmodules  DB_MIGRATIONS.md  DEPLOY_SUBMODULES.md  README.md  app_light.py  db_backup.py  db_migrate.py  open_lightapp_browser.ps1  py.ps1  render.yaml  requirements.txt  run_lightapp.ps1  update_mytools.ps1
LightApp/: __init__.py  app_light.py
migrations/: 001_fix_schema.sql
mytools/: .gitignore  LICENSE  README.md  pyproject.toml
mytools/frequency_db_utils/: __init__.py  word_adder.py
mytools/scripts/: IPA_cases.txt  List_test.txt  backup_database.py  check_ipa_dots_db.py  insert_homophone_ami_amie.py  insert_real_three_words.py  print_runtime_signature.py  run_ipa_cases.py  run_list_test_dry.py  run_real_openai_table_suite.py  run_real_phrase_suite.py  run_real_sommes.py  smoke_openai_liaison_parentheses.py
mytools/tests/: conftest.py  test_add_word_flow.py
static/: style.css
templates/: base.html  login.html  random_word.html  register.html
