[project]
name = "frequency-db-utils"
version = "0.1.0"
description = "Helpers to add words (translation, IPA, verb forms) to DB"
readme = "README.md"
license = {text = "MIT"}
authors = [ { name = "eduardebh" } ]
dependencies = ["requests", "openai"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["frequency_db_utils*"]
exclude = ["tests*", "scripts*"]
